--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -10,34 +10,34 @@
     d:DesignWidth="400"
     Tag="{x:Bind ViewModel.LocationData, Mode=OneWay}">
 
-    <Grid Background="{x:Bind ViewModel.Background, FallbackValue='#FF006FBF', Mode=OneWay}"
-          Height="100" BorderBrush="White" CornerRadius="2.5"
-          Name="MainGrid">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-        <ProgressRing x:Name="LoadingRing" Grid.ColumnSpan="2" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" Foreground="White"/>
-        <Viewbox Name="NameBox" Height="55" HorizontalAlignment="Left" Grid.Column="0" StretchDirection="DownOnly" Stretch="Uniform">
-            <TextBlock x:Name="LocationName" Text="{x:Bind ViewModel.LocationName, FallbackValue='New York, NY', Mode=OneWay}"
+    <Border Background="{x:Bind ViewModel.Background, FallbackValue='#FF006FBF', Mode=OneWay}" CornerRadius="2.5" BorderThickness="1">
+        <Grid Height="100" BorderBrush="White" Name="MainGrid">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <ProgressRing x:Name="LoadingRing" Grid.ColumnSpan="2" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" Foreground="White"/>
+            <Viewbox Name="NameBox" Height="55" HorizontalAlignment="Left" Grid.Column="0" StretchDirection="DownOnly" Stretch="Uniform">
+                <TextBlock x:Name="LocationName" Text="{x:Bind ViewModel.LocationName, FallbackValue='New York, NY', Mode=OneWay}"
                        Foreground="White" FontSize="24" VerticalAlignment="Center" Padding="10"
                        TextWrapping="WrapWholeWords"/>
-        </Viewbox>
-        <Viewbox Height="55" VerticalAlignment="Center" Grid.Column="1">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Viewbox Name="TempBox" Height="55" Width="55" Grid.Column="0">
-                    <TextBlock x:Name="CurrentTemp" Text="{x:Bind ViewModel.CurrTemp, FallbackValue='70&#xF045;', Mode=OneWay}" 
+            </Viewbox>
+            <Viewbox Height="55" VerticalAlignment="Center" Grid.Column="1">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Viewbox Name="TempBox" Height="55" Width="55" Grid.Column="0">
+                        <TextBlock x:Name="CurrentTemp" Text="{x:Bind ViewModel.CurrTemp, FallbackValue='70&#xF045;', Mode=OneWay}" 
                                Foreground="White" FontSize="24" Padding="10"/>
-                </Viewbox>
-                <Viewbox Name="IconBox" Height="55" Width="55" Grid.Column="1" Margin="5">
-                    <TextBlock x:Name="WeatherIcon" Text="{x:Bind ViewModel.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}" Style="{StaticResource WeatherIcon}"/>
-                </Viewbox>
-            </Grid>
-        </Viewbox>
+                    </Viewbox>
+                    <Viewbox Name="IconBox" Height="55" Width="55" Grid.Column="1" Margin="5">
+                        <TextBlock x:Name="WeatherIcon" Text="{x:Bind ViewModel.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}" Style="{StaticResource WeatherIcon}"/>
+                    </Viewbox>
+                </Grid>
+            </Viewbox>
+        </Grid>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="Mobile">
@@ -66,5 +66,5 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-    </Grid>
+    </Border>
 </UserControl>
