--- a/SimpleWeather.UWP/SetupLocationsPage.xaml
+++ b/SimpleWeather.UWP/SetupLocationsPage.xaml
@@ -249,6 +249,12 @@
         </Style>
     </Page.Resources>
 
+    <Page.Transitions>
+        <TransitionCollection>
+            <EdgeUIThemeTransition Edge="Left" />
+        </TransitionCollection>
+    </Page.Transitions>
+
     <ScrollViewer Background="{StaticResource SimpleBlue}">
         <RelativePanel x:Name="MainPanel" x:DeferLoadStrategy="Lazy" VerticalAlignment="Stretch"
                        MinHeight="80" Padding="25,0" RequestedTheme="Dark">
