--- a/SimpleWeather.UWP/SetupSettingsPage.xaml
+++ b/SimpleWeather.UWP/SetupSettingsPage.xaml
@@ -8,6 +8,12 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Transitions>
+        <TransitionCollection>
+            <EdgeUIThemeTransition Edge="Left" />
+        </TransitionCollection>
+    </Page.Transitions>
+
     <StackPanel RequestedTheme="Dark" Orientation="Vertical" Background="{StaticResource SimpleBlue}">
         <Viewbox Height="50" Margin="0,32,0,16" HorizontalAlignment="Center">
             <SymbolIcon Symbol="Setting" />
