--- a/SimpleWeather.UWP/WeatherNow.xaml
+++ b/SimpleWeather.UWP/WeatherNow.xaml
@@ -451,14 +451,12 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Viewbox Name="LocationBox" Margin="25,10,25,0" Height="50"
-                             Grid.Row="0">
+                    <Viewbox Name="LocationBox" Margin="25,10,25,0" Height="50" Grid.Row="0">
                         <TextBlock Name="Location" Text="{x:Bind WeatherView.Location, FallbackValue='New York, NY', Mode=OneWay}"
                                Foreground="White" FontWeight="SemiBold" TextAlignment="Center"
                                Padding="5" Transitions="{StaticResource TextTransitions}"/>
                     </Viewbox>
-                    <Viewbox Name="UpdateDateBox" Height="25"
-                             Grid.Row="1">
+                    <Viewbox Name="UpdateDateBox" Height="25" Grid.Row="1">
                         <TextBlock Name="UpdateDate" Text="{x:Bind WeatherView.UpdateDate, FallbackValue='Updated on 11:12 PM', Mode=OneWay}"
                                Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Bottom"
                                Padding="5" Transitions="{StaticResource TextTransitions}" FontSize="12"/>
@@ -492,8 +490,7 @@
                             </Grid>
                         </Button.Content>
                     </Button>
-                    <Viewbox x:Name="WeatherBox" VerticalAlignment="Bottom"
-                             Grid.Row="3">
+                    <Viewbox x:Name="WeatherBox" VerticalAlignment="Bottom" Grid.Row="3">
                         <TextBlock x:Name="WeatherIcon" Style="{StaticResource WeatherIcon}" Text="{x:Bind WeatherView.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}" />
                     </Viewbox>
                     <TextBlock Name="CurCondition" Text="{x:Bind WeatherView.CurCondition, FallbackValue='Sunny', Mode=OneWay}"
@@ -554,8 +551,7 @@
                                    FontSize="{x:Bind ForecastLabel.FontSize, Mode=OneWay}"
                                    Style="{StaticResource SectionLabel}" />
                         <ToggleSwitch Name="HourlySwitch" Grid.Column="1" OffContent="Summary" OnContent="Details"
-                                      RequestedTheme="Dark"
-                                      MinWidth="0" Margin="0,0,50,0" Toggled="HourlySwitch_Toggled"/>
+                                      RequestedTheme="Dark" MinWidth="0" Margin="0,0,50,0" Toggled="HourlySwitch_Toggled" />
                     </Grid>
                     <Border Style="{StaticResource Divider}"/>
                     <Grid Margin="0,0,0,0">
@@ -637,14 +633,13 @@
                                FontSize="{x:Bind ForecastLabel.FontSize, Mode=OneWay}"
                                Style="{StaticResource SectionLabel}" />
                     <Border Style="{StaticResource Divider}"/>
-                    <ItemsControl x:Name="DetailsPanel"
-                                  Margin="50,0,50,0"
+                    <ItemsControl x:Name="DetailsPanel" Margin="50,0,50,0"
                                   HorizontalAlignment="Center" HorizontalContentAlignment="Center"
                                   ItemsSource="{x:Bind WeatherView.WeatherDetails}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate x:DataType="controls:DetailItemViewModel">
                                 <Grid>
-                                    <localcontrols:DetailItem />
+                                    <localcontrols:DetailItem HorizontalAlignment="Center" />
                                 </Grid>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -662,15 +657,11 @@
                                FontSize="{x:Bind ForecastLabel.FontSize, Mode=OneWay}"
                                Style="{StaticResource SectionLabel}" />
                     <Border Style="{StaticResource Divider}"/>
-                    <localcontrols:SunPhasePanel x:Name="SunPhasePanel" Height="250" MaxWidth="640"
-                                                 Margin="0,0,0,0">
-                    </localcontrols:SunPhasePanel>
+                    <localcontrols:SunPhasePanel x:Name="SunPhasePanel" Height="250" MaxWidth="640" Margin="0,0,0,0" />
                 </StackPanel>
                 <TextBlock Text="{x:Bind WeatherView.WeatherCredit, FallbackValue='Data from Weather Provider', Mode=OneWay}" 
-                           Margin="{x:Bind ForecastHeader.Margin, Mode=OneWay}"
-                           Padding="10"
-                           FontSize="14"
-                           Foreground="White"/>
+                           Margin="{x:Bind ForecastHeader.Margin, Mode=OneWay}" Padding="10"
+                           FontSize="14" Foreground="White"/>
             </StackPanel>
         </ScrollViewer>
         <ProgressRing x:Name="LoadingRing" Grid.Row="1"
@@ -678,15 +669,39 @@
                       Height="50" Width="50" Foreground="White" IsActive="True"/>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="HeightStates">
-                <VisualState x:Name="MobileHeight">
+                <VisualState x:Name="LandscapeMobileHeight">
                     <VisualState.StateTriggers>
                         <AdaptiveTrigger MinWindowHeight="0"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="LocationBox.Height" Value="45"/>
+                        <Setter Target="LocationBox.Height" Value="40"/>
+                        <Setter Target="WeatherBox.Height" Value="50"/>
+                        <Setter Target="WeatherBox.Width" Value="50"/>
+                        <Setter Target="StackControl.Height" Value="160"/>
+                        <Setter Target="ForecastLabel.FontSize" Value="16"/>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="SmallMobileHeight">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowHeight="361"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="LocationBox.Height" Value="40"/>
+                        <Setter Target="WeatherBox.Height" Value="75"/>
+                        <Setter Target="WeatherBox.Width" Value="75"/>
+                        <Setter Target="StackControl.Height" Value="160"/>
+                        <Setter Target="ForecastLabel.FontSize" Value="16"/>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="MobileHeight">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowHeight="481"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="LocationBox.Height" Value="40"/>
                         <Setter Target="WeatherBox.Height" Value="100"/>
                         <Setter Target="WeatherBox.Width" Value="100"/>
-                        <Setter Target="StackControl.Height" Value="200"/>
+                        <Setter Target="StackControl.Height" Value="160"/>
                         <Setter Target="ForecastLabel.FontSize" Value="16"/>
                     </VisualState.Setters>
                 </VisualState>
@@ -698,7 +713,7 @@
                         <Setter Target="LocationBox.Height" Value="50"/>
                         <Setter Target="WeatherBox.Height" Value="125"/>
                         <Setter Target="WeatherBox.Width" Value="125"/>
-                        <Setter Target="StackControl.Height" Value="240"/>
+                        <Setter Target="StackControl.Height" Value="200"/>
                         <Setter Target="ForecastLabel.FontSize" Value="18"/>
                     </VisualState.Setters>
                 </VisualState>
@@ -710,7 +725,7 @@
                         <Setter Target="LocationBox.Height" Value="50"/>
                         <Setter Target="WeatherBox.Height" Value="150"/>
                         <Setter Target="WeatherBox.Width" Value="150"/>
-                        <Setter Target="StackControl.Height" Value="240"/>
+                        <Setter Target="StackControl.Height" Value="200"/>
                         <Setter Target="ForecastLabel.FontSize" Value="18"/>
                     </VisualState.Setters>
                 </VisualState>
@@ -724,7 +739,7 @@
                         <Setter Target="LeftButton.Visibility" Value="Collapsed"/>
                         <Setter Target="RightButton.Visibility" Value="Collapsed"/>
                         <Setter Target="ForecastHeader.Padding" Value="15,0,0,0"/>
-                        <Setter Target="HourlySwitch.Margin" Value="0,0,15,0"/>
+                        <Setter Target="HourlySwitch.Margin" Value="0,0,0,0"/>
                         <Setter Target="StackControl.Margin" Value="15,0,0,0"/>
                         <Setter Target="Location.FontSize" Value="32"/>
                         <Setter Target="DetailsPanel.Margin" Value="0,0,0,0"/>
